tests/NormalTests/paczka1/fuzzy1/60394560.err
Error in line 3: UdcH S109 67,8
Error in line 1: iLO2jQrrP A502 86,4
Error in line 4: UdcH A502 34,7
Error in line 9: UdcH S861 94,8
Error in line 2: t7Q5l8 S861 32,4
Error in line 6: iLO2jQrrP S109 31,5
Error in line 10: UdcH S572 41,6
Error in line 19: S572 S572 19,4
Error in line 28: UdcH S861 25,3
Error in line 31: ib3St Sg09 g20,3
Error in line 36: S572 S109 37,8
